--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,35 @@
+arabic-reshaper==2.1.3
 asgiref==3.4.1
+capstone==4.0.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+cryptography==36.0.0
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.9
+django-allauth==0.46.0
 django-heroku==0.3.1
+future==0.18.2
 gunicorn==20.1.0
+html5lib==1.1
+idna==3.3
+oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2==2.9.2
+pycparser==2.21
+PyJWT==2.3.0
+PyPDF2==1.26.0
+python-bidi==0.4.2
 python-decouple==3.5
+python3-openid==3.2.0
 pytz==2021.3
+reportlab==3.6.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.7
+webencodings==0.5.1
 whitenoise==5.3.0
+xhtml2pdf==0.2.5
