--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ requests==2.26.0
 requests-oauthlib==1.3.0
 six==1.16.0
 sqlparse==0.4.2
+tzdata==2021.5
 urllib3==1.26.7
 webencodings==0.5.1
 whitenoise==5.3.0
